--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple API to manage one's accounts",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/eslint/bin/eslint.js --config ./.eslintrc.js --fix ./",
     "start": "node index.js",
     "test": "./node_modules/mocha/bin/mocha test"
   },
@@ -13,6 +14,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.1.0",
+    "eslint-plugin-editorconfig": "^2.1.2",
+    "eslint-plugin-mocha": "^7.0.0",
     "mocha": "^7.2.0",
     "supertest": "^4.0.2"
   }
