--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "eslint-plugin-mocha": "^7.0.0",
     "mocha": "^7.2.0",
     "supertest": "^4.0.2"
+  },
+  "engines": {
+    "node": ">=10.0.0",
+    "npm": ">=6.0.0"
   }
 }
