--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Samuel Moore <sam@paradigmpost.com>",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
