--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^4.13.20",
+    "mongoose-express-router": "git+https://github.com/samtheprogram/mongoose-router.git#3.0.0-2"
   },
   "devDependencies": {
     "eslint": "^7.1.0",
@@ -21,6 +23,7 @@
     "eslint-plugin-mocha": "^7.0.0",
     "husky": "^4.2.5",
     "mocha": "^7.2.0",
+    "should": "^13.2.3",
     "supertest": "^4.0.2"
   },
   "engines": {
